...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        style="@style/AppWidget.ReplyButton"
        android:id="@+id/replyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reply_encrypted"
        app:icon="@drawable/ic_reply"
        app:layout_constraintEnd_toStartOf="@+id/replyAllButton"
        app:layout_constraintHorizontal_bias="0.5"
...
        android:id="@+id/replyAllButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/reply_encrypted"
        app:icon="@drawable/ic_reply_all"
        app:layout_constraintEnd_toStartOf="@+id/forwardButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/replyButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/AppWidget.ReplyButton"
...
