...
    <string name="warning">Warning</string>
    <string name="no_connection">No connection</string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="move_to_inbox">Move to Inbox</string>
    <string name="sending_message_must_not_be_empty">Message should not be empty</string>
    <string name="error_occurred_while_receiving_private_keys">Could not retrieve your private key</string>
    <string name="no_subject">(no subject)</string>
    <string name="error_occurred_please_try_again">Error occurred, please try again</string>
    <string name="user_photo">The user photo</string>
    <string name="template_message_part_public_key_owner">Public Key for %1$s</string>
    <string name="template_message_part_public_key_fingerprint"><![CDATA[(Fingerprint: <font color=\'#B7B7B7\'>%1$s</font>)]]></string>
...
    <string name="file_has_wrong_pgp_structure">The content of your file does not look like a valid PGP %1$s Key.</string>
    <string name="source_has_wrong_pgp_structure">The content which you provided does not look like a valid PGP %1$s Key.</string>
    <string name="key_successfully_imported">Key(s) successfully imported</string>
    <string name="the_key_successfully_imported">Key successfully imported</string>
    <string name="attach_file">Attach file</string>
    <string name="switch_to_standard_email">Switch to standard email</string>
    <string name="switch_to_secure_email">Switch to secure email</string>
    <string name="this_message_will_not_be_encrypted">This message will not be encrypted</string>
    <string name="import_their_public_key">Import their Public Key</string>
    <string name="copy_from_other_contact">Copy from other contact</string>
    <string name="template_remove_recipient">Remove %1$s</string>
    <string name="protect_with_password">Protect with password</string>
    <string name="recipient_does_not_use_pgp">Recipient doesn\'t use PGP</string>
...
